[MOSIP-19814] Fixed the issue when user clicks on column sort icon holiday date & status replicates and flickers.

--- a/admin-ui/src/app/shared/table/table.component.scss
+++ b/admin-ui/src/app/shared/table/table.component.scss
@@ -49,8 +49,8 @@ td.mat-footer-cell:first-child {
   padding-left: 20px;
 }
 
-th:last-child {
-  width: 0px;
+.master-data th:last-child {
+  width: 5%;
 }
 
 th.mat-header-cell:last-child,
